--- a/src/Panama/Resources/Dictionary/CheckBox.xaml
+++ b/src/Panama/Resources/Dictionary/CheckBox.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:tk="http://schemas.restless.toolkit.com/2021">
 
     <ControlTemplate x:Key="CheckBoxControlTemplate" TargetType="CheckBox">
         <Grid>
@@ -9,6 +10,7 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Border
+                x:Name="Outer"
                 Width="16"
                 Height="16"
                 Background="{TemplateBinding Background}"
@@ -35,6 +37,9 @@
             <Trigger Property="IsChecked" Value="True">
                 <Setter TargetName="Inner" Property="Visibility" Value="Visible"/>
             </Trigger>
+            <Trigger Property="IsChecked" Value="{x:Null}">
+                <Setter TargetName="Outer" Property="Background" Value="{StaticResource DisabledBackgroundBrush}"/>
+            </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
     
@@ -51,5 +56,29 @@
 
     <Style TargetType="CheckBox" BasedOn="{StaticResource DefaultCheckBoxStyle}"/>
 
+    <Style x:Key="DefaultThreeWayStyle" TargetType="tk:ThreeWay">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="SelectorHeight" Value="20"/>
+        <Setter Property="SelectorRadius" Value="2"/>
+        <Setter Property="MinSelectorAreaWidth" Value="120"/>
+        <Setter Property="OnText" Value="Yes"/>
+        <Setter Property="OffText" Value="No"/>
+        <Setter Property="HeaderStyle">
+            <Setter.Value>
+                <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Static tk:ThreeWay.HeaderStyleKey}}">
+                    <Setter Property="Foreground" Value="{StaticResource AlertForegroundBrush}"/>
+                </Style>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="OnOffStyle">
+            <Setter.Value>
+                <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Static tk:ThreeWay.OnOffStyleKey}}">
+                    <Setter Property="Foreground" Value="{StaticResource DefaultForegroundBrush}"/>
+                </Style>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="tk:ThreeWay" BasedOn="{StaticResource DefaultThreeWayStyle}"/>
 
 </ResourceDictionary>
