--- a/src/Panama/View/EditControls/PublisherEditContainer.xaml
+++ b/src/Panama/View/EditControls/PublisherEditContainer.xaml
@@ -1,15 +1,15 @@
 ﻿<UserControl 
-    x:Class="Restless.Panama.View.TitleEditContainer"
+    x:Class="Restless.Panama.View.PublisherEditContainer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
     xmlns:vw="clr-namespace:Restless.Panama.View" 
-    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:PublisherViewModel}"
     mc:Ignorable="d" 
     d:DesignHeight="800" d:DesignWidth="330">
-    <DockPanel>
+    <DockPanel tk:Property.RowHeights="Auto,Auto,*,Auto,Auto,Auto,*">
         <tk:RadioButtonPanel
             DockPanel.Dock="Top"
             Margin="0,0,0,8"
@@ -17,47 +17,34 @@
             SelectedValue="{Binding SelectedEditSection}">
             
             <tk:RadioButton Grid.Column="0" Value="1" Content="Main"/>
-            <tk:RadioButton Grid.Column="1" Value="2" Content="Tags"/>
-            <tk:RadioButton Grid.Column="2" Value="3" Content="Version"/>
-            <tk:RadioButton Grid.Column="3" Value="4" Content="Submission"/>
-            <tk:RadioButton Grid.Column="4" Value="5" Content="Published"/>
-            <tk:RadioButton Grid.Column="5" Value="6" Content="Preview"/>
+            <tk:RadioButton Grid.Column="1" Value="2" Content="Periods"/>
+            <tk:RadioButton Grid.Column="2" Value="3" Content="Submissions"/>
+            <tk:RadioButton Grid.Column="3" Value="4" Content="Credentials"/>
         </tk:RadioButtonPanel>
 
-        <!-- Main title data -->
-        <vw:TitleEditMain
+        <!-- Main publisher data -->
+        <vw:PublisherEditMain
             DockPanel.Dock="Top"
             tk:Property.IsLongVisible="{Binding SelectedEditSection}"
             tk:Property.IsLongVisibleValue="1"/>
         
-        <!-- Tags -->
-        <vw:TitleEditTag
+        <!-- Submission periods -->
+        <vw:PublisherEditPeriod
             DockPanel.Dock="Top"
             tk:Property.IsLongVisible="{Binding SelectedEditSection}"
             tk:Property.IsLongVisibleValue="2"/>
         
-        <!-- Versions -->
-        <vw:TitleEditVersion
+        <!-- Submissions -->
+        <vw:PublisherEditSubmission
             DockPanel.Dock="Top"
             tk:Property.IsLongVisible="{Binding SelectedEditSection}"
             tk:Property.IsLongVisibleValue="3"/>
 
-        <!-- Submissions -->
-        <vw:TitleEditSubmission
+        <!-- Credentials -->
+        <vw:PublisherEditCredential
             DockPanel.Dock="Top"
             tk:Property.IsLongVisible="{Binding SelectedEditSection}"
             tk:Property.IsLongVisibleValue="4"/>
 
-        <!-- Published -->
-        <vw:TitleEditPublished
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="5"/>
-
-        <!-- Preview -->
-        <vw:TitleEditPreview
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="6"/>
     </DockPanel>
 </UserControl>
