--- a/src/Panama/View/TitleView.xaml
+++ b/src/Panama/View/TitleView.xaml
@@ -87,6 +87,7 @@
                 Text="(row filter in effect)"/>
         </StatusBar>
 
+        <!-- Advanced filter -->
         <Popup
             Placement="Bottom"
             PlacementTarget="{Binding ElementName=CustomFilterButton}"
@@ -102,25 +103,34 @@
                 
                 <Grid 
                     tk:Property.ColumnWidths="*,*"
+                    tk:Property.RowHeights="Auto,*"
                     Style="{StaticResource DataEntryPanelStyle}">
 
-                    <StackPanel>
-                        <tk:ThreeWay Header="Ready" State="{Binding Filters.ReadyState}"/>
-                        <tk:ThreeWay Header="Flagged" State="{Binding Filters.FlaggedState}"/>
-                        <tk:ThreeWay Header="Published" State="{Binding Filters.PublishedState}"/>
+                    <StackPanel Grid.ColumnSpan="2">
+                        <TextBlock Text="{x:Static r:Strings.TextTitle}"/>
+                        <TextBox
+                            Text="{Binding Filters.Text, 
+                            UpdateSourceTrigger=PropertyChanged,
+                            Delay=500}"/>
                     </StackPanel>
 
-                    <StackPanel Grid.Column="1">
-                        <tk:ThreeWay Header="Submitted" State="{Binding Filters.CurrentlySubmittedState}"/>
-                        <tk:ThreeWay Header="Ever Submitted" State="{Binding Filters.EverSubmittedState}"/>
-                        <tk:ThreeWay Header="Self Published" State="{Binding Filters.SelfPublishedState}"/>
+                    <StackPanel Grid.Row="1">
+                        <tk:ThreeWay Header="{x:Static r:Strings.TextReady}" State="{Binding Filters.ReadyState}"/>
+                        <tk:ThreeWay Header="{x:Static r:Strings.TextFlagged}" State="{Binding Filters.FlaggedState}"/>
+                        <tk:ThreeWay Header="{x:Static r:Strings.TextPublished}" State="{Binding Filters.PublishedState}"/>
+                    </StackPanel>
+
+                    <StackPanel Grid.Row="1" Grid.Column="1">
+                        <tk:ThreeWay Header="{x:Static r:Strings.TextSubmitted}" State="{Binding Filters.CurrentlySubmittedState}"/>
+                        <tk:ThreeWay Header="{x:Static r:Strings.TextEverSubmitted}" State="{Binding Filters.EverSubmittedState}"/>
+                        <tk:ThreeWay Header="{x:Static r:Strings.TextSelfPublished}" State="{Binding Filters.SelfPublishedState}"/>
                     </StackPanel>
 
                 </Grid>
             </Border>
         </Popup>
 
-        <!-- Main data grid to display the tabular data -->
+        <!-- Main data grid -->
         <Border Grid.Row="1" Style="{StaticResource BorderEditContainerStyle}">
             <tk:DataGrid 
                 RowHeight="{Binding Config.DataGridRowHeight}"
